# TheMatrix

./: .gitignore  THE_MIND.md  THE_PATH.md  check_iq.py  purge_noise.py  render.yaml
backend/: Dockerfile  GUIDANCE.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_blueprint_content_entries.py  0005_pattern_candidates.py  0007_seed_mind_memory_entries.py  0008_pce_tables.py  0009_angel_reports.py
backend/app/: app_company.py  app_social_fork.py  config.py  dependencies.py  main.py  security_headers.py  worker.py
backend/app/api/: routes_admin.py  routes_angel_manuals.py  routes_auth.py  routes_companion.py  routes_consent.py  routes_events.py  routes_guidance.py  routes_guidance_spawn.py  routes_health.py  routes_ingest.py  routes_learn.py  routes_matrix_overview.py  routes_mind.py  routes_mind_ask.py  routes_mind_dream.py  routes_monitor.py  routes_navigate.py  routes_quran.py  routes_seed.py  routes_seed_mind_conversation.py  routes_source_seed.py  routes_think.py  routes_topic_manual.py  routes_user.py  routes_web_mining.py  routes_wiki_queue.py  routes_wisdom_sync.py  routes_world.py  routes_world_current.py  routes_yt.py  routes_yt_queue.py
backend/app/core/: angel_manual_service.py  base_goodness_pattern.py  base_seed_identity.py  basin_classifier.py  belief.py  closure_leakage_lag.py  companion_engine.py  compatibility_layer.py  convergence_cognition.py  convergence_event_bus.py  cycle_stage.py  director_service.py  domains.py  engine.py  evolution_stage.py  fact_kernel.py  fibonacci_scaling.py  generational_cycle.py  global_coupler.py  guidance_kernel.py  identity_gravity.py  identity_hierarchy.py  laws_kernel.py  llm_router.py  mind_pulse_worker.py  mind_router.py  moral_kernel.py  oscillation.py  pattern_encoder.py  pattern_space.py  pce_engine.py  phi.py  product_lifecycle.py  proto_codec.py  reality_check_kernel.py  residual_novelty.py  seed_mind_conversation.py  seed_mind_memory.py  seed_mind_store.py  stability_band.py  (+3 more)
backend/app/db/: redis_client.py  seed.py  session.py
backend/app/models/: admin.py  angel_report.py  angel_task.py  audit_log.py  blueprint.py  blueprint_content.py  brand_profile.py  companion_bond.py  content_idea.py  content_package.py  device_session.py  feedback.py  identity_instance.py  identity_pattern.py  interaction_frame.py  knowledge_pattern.py  mind_location.py  pattern_candidate.py  pce.py  platform_connection.py  (+6 more)
(+188 files in other folders)
